Update github pages

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <meta property="og:locale" content="ru_RU" />
 <meta name="description" content="Описание" />
 <meta property="og:description" content="Описание" />
-<link rel="canonical" href="https://phuketfaq.ru//404.html" />
-<meta property="og:url" content="https://phuketfaq.ru//404.html" />
+<link rel="canonical" href="https://phuketfaq.ru//" />
+<meta property="og:url" content="https://phuketfaq.ru//" />
 <meta property="og:site_name" content="Faq" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Faq" />
 <script type="application/ld+json">
-{"description":"Описание","@type":"WebPage","url":"https://phuketfaq.ru//404.html","headline":"Faq","author":{"@type":"Person","name":"PumainThailand"},"@context":"https://schema.org"}</script>
+{"description":"Описание","@type":"WebSite","url":"https://phuketfaq.ru//","name":"Faq","headline":"Faq","author":{"@type":"Person","name":"PumainThailand"},"@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://phuketfaq.ru//feed.xml" title="Faq" /></head>
 <body><header class="site-header" role="banner">
@@ -36,27 +36,58 @@
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+        <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-<div class="container">
-  <h1>404</h1>
+   ym(86698670, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/86698670" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0S0XPK3BWH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  gtag('config', 'G-0S0XPK3BWH');
+</script>
+
+<div class="home">
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity": [{"@type":"Question","name":"Вопрос","acceptedAnswer":{"@type":"Answer","text":"Ответ\n"}},{"@type":"Question","name":"Вопрос №2","acceptedAnswer":{"@type":"Answer","text":"Ответ"}}] }</script>
+
+<ul>
+  <li><a href="#хэш">Группа Вопросов</a>
+    <ul>
+      <li><a href="#Хэш">Вопрос</a></li>
+      <li><a href="#Хэш">Вопрос №2</a></li>
+    </ul>
+  </li>
+</ul>
+
+<h1 id="группа-вопросов"><a name="хэш"></a>Группа Вопросов</h1>
+
+<h2 id="вопрос"><a name="Хэш"></a>Вопрос</h2>
+
+<p>Ответ</p>
+
+<h2 id="вопрос-2"><a name="Хэш"></a>Вопрос №2</h2>
+
+<p>Ответ</p>
+
+
+
+
+
 </div>
-
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/"></data>
