Update github pages

--- a/index.html
+++ b/index.html
@@ -61,25 +61,50 @@
   gtag('config', 'G-0S0XPK3BWH');
 </script>
 
-<div class="home">
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity": [{"@type":"Question","name":"Вопрос","acceptedAnswer":{"@type":"Answer","text":"Ответ\n"}},{"@type":"Question","name":"Вопрос №2","acceptedAnswer":{"@type":"Answer","text":"Ответ"}}] }</script>
+<div class="home"><script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity": [{"@type":"Question","name":"Вопрос","acceptedAnswer":{"@type":"Answer","text":"Ответ\n"}},{"@type":"Question","name":"Вопрос №2","acceptedAnswer":{"@type":"Answer","text":"Ответ\n"}},{"@type":"Question","name":"Вопрос №3","acceptedAnswer":{"@type":"Answer","text":"Ответ\n"}},{"@type":"Question","name":"Вопрос 1","acceptedAnswer":{"@type":"Answer","text":"Ответ\n"}},{"@type":"Question","name":"Вопрос №2","acceptedAnswer":{"@type":"Answer","text":"Ответ\n"}},{"@type":"Question","name":"Вопрос №3","acceptedAnswer":{"@type":"Answer","text":"Ответ"}}] }</script>
 
 <ul>
-  <li><a href="#хэш">Группа Вопросов</a>
+  <li><a href="#хэш">Общие вопросы</a>
     <ul>
       <li><a href="#Хэш">Вопрос</a></li>
       <li><a href="#Хэш">Вопрос №2</a></li>
+      <li><a href="#Хэш">Вопрос №3</a></li>
+    </ul>
+  </li>
+  <li><a href="#хэш">Общие вопросы 2</a>
+    <ul>
+      <li><a href="#Хэш">Вопрос 1</a></li>
+      <li><a href="#Хэш">Вопрос №2</a></li>
+      <li><a href="#Хэш">Вопрос №3</a></li>
     </ul>
   </li>
 </ul>
 
-<h1 id="группа-вопросов"><a name="хэш"></a>Группа Вопросов</h1>
+<h1 id="общие-вопросы"><a name="хэш"></a>Общие вопросы</h1>
 
 <h2 id="вопрос"><a name="Хэш"></a>Вопрос</h2>
 
 <p>Ответ</p>
 
 <h2 id="вопрос-2"><a name="Хэш"></a>Вопрос №2</h2>
+
+<p>Ответ</p>
+
+<h2 id="вопрос-3"><a name="Хэш"></a>Вопрос №3</h2>
+
+<p>Ответ</p>
+
+<h1 id="общие-вопросы-2"><a name="хэш"></a>Общие вопросы 2</h1>
+
+<h2 id="вопрос-1"><a name="Хэш"></a>Вопрос 1</h2>
+
+<p>Ответ</p>
+
+<h2 id="вопрос-2-1"><a name="Хэш"></a>Вопрос №2</h2>
+
+<p>Ответ</p>
+
+<h2 id="вопрос-3-1"><a name="Хэш"></a>Вопрос №3</h2>
 
 <p>Ответ</p>
 
