Update github pages

--- a/index.html
+++ b/index.html
@@ -473,10 +473,10 @@ https://web.thailandsha.com/shaextraplus</li>
 
 </div>
 
-<button onclick="topFunction()" id="goTopBtn" title="Go to top">🔝</button>
+<button onclick="topFunction()" id="topBtn" title="Top">🔝</button>
 
 <style lang="css">
-    #goTopBtn {
+    #topBtn {
         display: none;
         position: fixed;
         bottom: 20px;
@@ -492,13 +492,13 @@ https://web.thailandsha.com/shaextraplus</li>
         font-size: 18px;
     }
 
-    #goTopBtn:hover {
+    #topBtn:hover {
         background-color: #a3a3a3;
     }
 </style>
 
 <script lang="js">
-    goTopBtn = document.getElementById("goTopBtn");
+    goTopBtn = document.getElementById("topBtn");
     window.onscroll = function() {scrollFunction()};
     function scrollFunction() {
         if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
