Update github pages

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <ul>
       <li><a href="#pravanaupravleniedronom">Можно привезти свой дрон и использовать?</a></li>
       <li><a href="#pravanaupravlenie">Нужны ли права на пхукете для езды на байке?</a></li>
-      <li><a href="#animalphuket">Какие правила вывоза животных с Пхукета?</a></li>
+      <li><a href="#exportAnimal">Какие правила вывоза животных с Пхукета?</a></li>
       <li><a href="#call">Полезные телефоны</a></li>
       <li><a href="#animalphuket">Что запрещено ввозить/вывозить?</a></li>
       <li><a href="#importAnimal">Какие правила ввоза животных на Пхукет?</a></li>
@@ -971,7 +971,7 @@
 
 <p>И хотя туристы зачастую катаются на Пхукете без прав, получить их в Таиланде не так сложно. Поэтому, если вы едите на долго, и вам необходим личный транспорт, лучше не полениться и получить права.</p>
 
-<h2 id="animalphuket">Какие правила вывоза животных с Пхукета?</h2>
+<h2 id="exportAnimal">Какие правила вывоза животных с Пхукета?</h2>
 
 <ul>
   <li>Вывоз животных из Пхукета сопровождается установленными правилами. Прежде всего, у животного должен быть ветеринарный паспорт со всеми указанными необходимыми прививками. Надо подготовить документы для вывоза животного (если его можно вывозить), перечень которых выдаст ветеринарная лечебница. Если надо совершать перелет, о том что будет “лететь” животное, компанию надо заблаговременно оповестить. И надо не забывать что все эти хлопоты ещё и стоят немалых денег.
